--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link href="//cdn.bootcss.com/pace/1.0.2/themes/blue/pace-theme-minimal.css" rel="stylesheet">
 
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 
 
     <style> .article { opacity: 0;} </style>
@@ -95,6 +95,7 @@
 
 
 </head>
+
 <body>
   <div id="container">
     <div class="left-col">
