--- a/backup/show/fcc/resume.html
+++ b/backup/show/fcc/resume.html
@@ -52,16 +52,19 @@ p{
 
 
 .content{
-  position:relative;
-  top: 46px;
-  z-index: 1031;
+  padding-top:50px;
+  height: 100%;
+}
+.content>div{
+  height:100%;
 }
 .section-home{
-  height: 855px;
+  height: 100%;
   text-align: center;
     background: url('https://40.media.tumblr.com/1b916597d3e174399cb7adadddb66ede/tumblr_nt5uk4psl31ud7rr3o1_1280.jpg') no-repeat center center fixed;
     background-size: cover;
 }
+
 .bg1{
   background:rgba(0,0,0, 0.4);
   height: 100%;
@@ -69,7 +72,7 @@ p{
 /*Big header*/
 .intro-message {
     text-shadow: 2px 1px 2px #000;
-    font-size: 3em;
+    font-size: 2em;
     color: rgba(255, 255, 255, 0.7);
 }
 .info-common{
@@ -87,7 +90,7 @@ table tr:hover{
 .section-skill{
     background: url('https://lysnake.github.io/background/bg-8.jpg') no-repeat center center fixed;
     background-size: cover;
-    height: 855px;
+    height: 100%;
 }
 .bg2{
   background: rgba(255, 255, 255, 0.3);
@@ -213,10 +216,9 @@ ul.list-unstyled>li{
 }
 /*项目*/
 .show-project{
-  display: inline-block;
   position: relative;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 10% auto;
 }
 .show-project:hover{
   transition: 0.5s;
@@ -235,9 +237,12 @@ ul.list-unstyled>li{
 /*section-contact*/
 .section-contact{
   color: black;
-  height: 855px;
+  height: 100%;
   background: url('https://lysnake.github.io./background/bg-9.jpg') no-repeat center center fixed;
   background-size: cover;
+}
+.section-contact .row{
+  padding-top: 3em;
 }
 .banner-social-buttons {
     float: right;
@@ -253,7 +258,6 @@ ul.banner-social-buttons > li:last-child {
   margin-bottom: 0;
 }
 h2.contact-mail{
-  padding-top: 3em;
   font-size: 2.5em;
   color:rgba(255, 255, 255, 0.7);
   text-shadow: 2px 1px 2px #000;
@@ -261,12 +265,6 @@ h2.contact-mail{
 </style>
   </head>
 <body>
-<head>
-  <title>FCC-2</title>
-</head>
-<head>
-  <title>FCC-2</title>
-</head>
 <nav class="nav navbar navbar-default  navbar-fixed-top " role="navigation">
   <div class="container-fluid topnav">
     <div class="navbar-header">
@@ -281,9 +279,9 @@ h2.contact-mail{
     <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="tab-pane "><a href="#Home" aria-controls="Home" role="tab" data-toggle="tab">主页</a></li>
+        <li role="presentation" class="tab-pane active"><a href="#Home" aria-controls="Home" role="tab" data-toggle="tab">主页</a></li>
         <li role="presentation" class="tab-pane "><a href="#About" aria-controls="About" role="tab" data-toggle="tab">技能树</a></li>
-        <li role="presentation" class="tab-pane active"><a href="#Portfolio" aria-controls="Portfolio" role="tab" data-toggle="tab">项目</a></li>
+        <li role="presentation" class="tab-pane "><a href="#Portfolio" aria-controls="Portfolio" role="tab" data-toggle="tab">项目</a></li>
         <li role="presentation" class="tab-pane "><a href="#Contact" aria-controls="Contact" role="tab" data-toggle="tab">联系方式</a></li>
       </ul>
     </div>
@@ -291,7 +289,7 @@ h2.contact-mail{
 </nav>
 <!-- Tab panes -->
 <div class="tab-content content">
-  <div role="tabpanel" class="tab-pane " id="Home">
+  <div role="tabpanel" class="tab-pane active" id="Home">
     <div class="section-home">
       <div class="bg1">
         <div class="container">
@@ -339,14 +337,14 @@ h2.contact-mail{
       <div class="bg2">
         <div class="container">
           <div class="row" style="padding-top:50px">
-            <div class="col-xs-5 col-sm-4 col-md-4 col-lg-4" >
+            <div class="col-xs-5 col-sm-4 col-md-4 col-lg-4  " >
               <a href="https://lysnake.github.io" target="_blank">
                 <div class="avatar">
                   <img src="https://lysnake.github.io/img/avatar.png" class="animated zoomIn" alt="个人网络帐号常用头像" />
                 </div>
               </a>
               <h4 class="text-center">李涛波</h2>
-              <ul class="list-unstyled banner-social-buttons text-center" >
+              <ul class="list-unstyled  text-center" >
                 <li>
                   <a href="https://github.com/lysnake" target="_blank" class="btn btn-default btn-sm "><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                 </li>
@@ -411,7 +409,7 @@ h2.contact-mail{
       </div>
     </div>
   </div>
-  <div role="tabpanel" class="tab-pane active" id="Portfolio">
+  <div role="tabpanel" class="tab-pane " id="Portfolio">
     <div class="section-project">
       <div class="bg3">
         <div class="container">
@@ -421,8 +419,29 @@ h2.contact-mail{
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6">
-              <div class="show-project text-center">
+            <div class="col-md-12  col-lg-6">
+              <div class="show-project center-block">
+                <a href="https://lysnake.github.io/backup/show/canvas/index.html"  target="_blank">
+                  <img src="https://lysnake.github.io/backup/show/fcc/img/canvas.jpg" class="img-responsive" alt="谢尔宾斯基三角" />
+                  <div class="project-info">
+                    <h2 >canvas画谢尔宾斯基三角</h2>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-12 col-lg-6">
+              <div class="show-project center-block">
+                <a href="https://lysnake.github.io/backup/show/2/index.html"  target="_blank">
+                  <img src="https://lysnake.github.io/backup/show/fcc/img/2.jpg" class="img-responsive" alt="电商网站" />
+                  <div class="project-info">
+                    <h2 >电商网页</h2>
+                  </div>
+                </a>
+              </div>
+            </div>
+          <div class="row">
+            <div class="col-md-12 col-lg-6">
+              <div class="show-project center-block">
                 <a href="https://github.com/LySnake/wechat-Study163"  target="_blank">
                   <img src="https://github.com/LySnake/wechat-Study163/raw/master/images/banner.gif" class="img-responsive" alt="网易云课堂小程序" />
                   <div class="project-info">
@@ -432,8 +451,8 @@ h2.contact-mail{
                 </a>
               </div>
             </div>
-            <div class="col-lg-6">
-              <div class="show-project text-center">
+            <div class="col-md-12 col-lg-6">
+              <div class="show-project center-block">
                 <a href="https://lysnake.github.io/backup/show/doraemon/index.html"  target="_blank">
                   <img src="https://lysnake.github.io/backup/show/fcc/img/doraemon.jpg" class="img-responsive" alt="CSS画叮当猫" />
                   <div class="project-info">
@@ -443,27 +462,6 @@ h2.contact-mail{
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="show-project text-center">
-                <a href="https://lysnake.github.io/backup/show/canvas/index.html"  target="_blank">
-                  <img src="https://lysnake.github.io/backup/show/fcc/img/canvas.jpg" class="img-responsive" alt="谢尔宾斯基三角" />
-                  <div class="project-info">
-                    <h2 >canvas画谢尔宾斯基三角</h2>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="show-project text-center">
-                <a href="https://lysnake.github.io/backup/show/2/index.html"  target="_blank">
-                  <img src="https://lysnake.github.io/backup/show/fcc/img/2.jpg" class="img-responsive" alt="电商网站" />
-                  <div class="project-info">
-                    <h2 >电商网页</h2>
-                  </div>
-                </a>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -473,13 +471,13 @@ h2.contact-mail{
     <div class="section-contact">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
-            <h2 class="contact-mail">如果有面试要求，还请发送一份面试通知到litaobo619@163.com，谢谢！</h2>
+          <div >
+            <h3 style="color:#FFF;">如果有面试通知，还请发送一份面试通知到litaobo619@163.com，谢谢！</h3>
           </div>
           </br>
 
-        <div class="col-lg-6">
-          <ul class="list-inline banner-social-buttons ">
+        <div >
+          <ul class="list-inline text-center center-block">
             <li>
               <a href="https://github.com/lysnake" target="_blank" class="btn btn-default btn-lg "><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
             </li>
