完成  电脑硬件   今后完善

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         
   
     <h1 itemprop="name">
-      <a class="article-title" href="archives/technology/电脑小白系列之电脑硬件了解.html">sdf.md</a>
+      <a class="article-title" href="archives/technology/电脑小白系列之电脑硬件了解.html">电脑小白系列之电脑硬件了解</a>
     </h1>
   
 
