c++ primer plus 笔记4---完善

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         
   
     <h1 itemprop="name">
-      <a class="article-title" href="archives/technology/C++ Primer Plus学习笔记(4).html">it</a>
+      <a class="article-title" href="archives/technology/C++ Primer Plus学习笔记(4).html">C++ Primer Plus学习笔记(4)</a>
     </h1>
   
 
