复习《C++笔记4》并维护

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         
   
     <h1 itemprop="name">
-      <a class="article-title" href="archives/technology/SQL Server从入门到精通(1).html">&#39;SQL Server从入门到精通(1)&#39;</a>
+      <a class="article-title" href="archives/technology/SQL Server从入门到精通(1).html">SQL Server从入门到精通(1)</a>
     </h1>
   
 
